--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "mithril": "^2.0.4"
+    "@bunchtogether/vite-plugin-flow": "^1.0.2",
+    "@types/node": "^18.8.4",
+    "mithril": "^2.0.4",
+    "pdfjs-dist": "^2.16.105"
   },
   "devDependencies": {
     "@types/mithril": "^2.0.8",
