--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@bunchtogether/vite-plugin-flow": "^1.0.2",
     "@types/node": "^18.8.4",
-    "mithril": "^2.0.4"
+    "mithril": "^2.0.4",
+    "mithril-stream": "^2.0.0"
   },
   "devDependencies": {
     "@types/mithril": "^2.0.8",
