--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mithril-app",
+  "name": "stroy-board",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "@bunchtogether/vite-plugin-flow": "^1.0.2",
-    "@types/node": "^18.8.4",
+    "@ionic/core": "^7.6.3",
     "mithril": "^2.0.4",
-    "mithril-stream": "^2.0.0"
+    "mithril-stream": "^2.0.0",
+    "ramda": "^0.29.1",
+    "wavesurfer.js": "^7.6.0"
   },
   "devDependencies": {
-    "@types/mithril": "^2.0.8",
-    "typescript": "^4.4.3",
     "vite": "^2.6.2"
   }
 }
