--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mithril": "^2.0.4",
     "mithril-stream": "^2.0.0",
     "ramda": "^0.29.1",
+    "data.task": "^3.1.2",
     "wavesurfer.js": "^7.6.0"
   },
   "devDependencies": {
