--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stroy-board",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite process.env.NODE_ENV=dev",
+    "dev": "vite",
     "build": "rm -rf docs; vite build",
     "preview": "vite preview"
   },
